Set the default XX:PermSize and XX:MaxPermSize to bigger values for WebLogic12x